# multiscan

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
config/: config.yaml
config/reconstruction/: reconstruction.yaml
dataset/: README.md  Readme.md  core.py  download.sh  gen_articulated_dataset.py  gen_instsegm_dataset.py  gen_opdpn_dataset.py  gen_partsegm_dataset.py
dataset/benchmark/: object_semantic_label_map.csv  part_semantic_label_map.csv  scans_split.csv
dataset/config/: config.yaml
dependencies/: mvs-texturing.patch
docs/: staging_file_format.md
docs/proj-web/: index.html
docs/proj-web/css/: app.47be94a9.css  chunk-vendors.adf947b7.css
docs/proj-web/js/: app.7ad8e97a.js  app.7ad8e97a.js.map  chunk-vendors.f6794168.js  chunk-vendors.f6794168.js.map
docs/proj-web/vis/: index.html
docs/read-the-docs/: code-structure.rst  conf.py  index.rst  overview.rst  pipeline.rst  references.bib  references.rst
docs/read-the-docs/_static/dataset/: scene_00000_00.annotations.json  scene_00000_00.semseg.json
docs/read-the-docs/annotation/: articulation.rst  index.rst  obb.rst  semantic.rst  verification.rst
docs/read-the-docs/benchmark/: dataset.rst  index.rst
docs/read-the-docs/dataset/: index.rst
docs/read-the-docs/dataset/files/: acquired.rst  annotation.rst  output.rst
docs/read-the-docs/scanner/: index.rst
docs/read-the-docs/server/: index.rst
docs/read-the-docs/web-ui/: index.rst
multiscan/meshproc/: __init__.py  common.py  plymesh.py
multiscan/utils/: __init__.py  io.py
reconstruction/: README.md  __init__.py  main.py
reconstruction/config/: setting.proto  setting.txt  setting_pb2.py  setting_pb2.pyi
reconstruction/doc/: details.md
reconstruction/functions/: utils.py
reconstruction/scripts/: base.py  bridge.py  configure.py  make_fragments.py  reconstruct.py  refine_registration.py  register_fragments.py  utils.py
scanner/: index.html
scanner/android/: README.html  README.md  settings.gradle
scanner/android/app/: build.gradle
scanner/android/app/src/: overview.html
scanner/android/app/src/main/: AndroidManifest.xml
scanner/android/gradle/wrapper/: gradle-wrapper.properties
scanner/ios/: .gitignore  README.md
scanner/ios/ScannerApp-Swift/: AppDelegate.swift  Info.plist  SceneDelegate.swift
scanner/ios/ScannerApp-Swift.xcodeproj/: project.pbxproj
scanner/ios/ScannerApp-Swift.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
scanner/ios/ScannerApp-Swift/Base.lproj/: Main.storyboard
scanner/ios/ScannerApp-Swift/Controller/: CameraViewController.swift  ConfigurationViewController.swift  LibraryTableViewController.swift  LibraryViewController.swift  RecordingDetailViewController.swift  ViewController.swift
scanner/ios/ScannerApp-Swift/Model/: Compression.swift  Compressor.swift  Constants.swift  Helper.swift  HttpRequestHandler.swift  Metadata.swift  MotionData.swift  MotionManager.swift  SimdCodableExtensions.swift  UserDefaultsExtension.swift  VideoHelper.swift
scanner/ios/ScannerApp-Swift/Model/Recorder/: CameraInfoRecorder.swift  ConfidenceMapRecorder.swift  DepthRecorder.swift  RGBRecorder.swift  Recorder.swift
scanner/ios/ScannerApp-Swift/Model/RecordingManager/: ARCameraRecordingManager.swift  DualCameraRecordingManager.swift  RecordingManager.swift  SingleCameraRecordingManager.swift  StereoDepthRecordingManager.swift
scanner/ios/ScannerApp-Swift/View/: LibraryTableViewCell.swift  PopUpView.swift  PreviewView.swift
scanner/ios/doc/: INSTALL.md
scanner/ios/res/sample-files/: camera-info-example.jsonl  metadata-example.json
scripts/debug-server/: debug_server.py
scripts/sensors/: README.md  imuReader.py  plyfile.py  sensorReader.py
segmentator/: CMakeLists.txt  README.md  half_edge.cpp  half_edge.h  segment.cpp  segment.h  segmentator.cpp  tinyply.h  trimesh.cpp  trimesh.h
server/: .gitignore  README.md  compute_annotation_stats.py  compute_timings.py  config.py  index.py  monitor.py  process.py  scan_processor.py  start_upload_server.sh  upload.py  util.py
server/config/: multiscan.json  scan_stages.json  upload.ini
server/scripts/: align_pairs.py  combine_stats.py  depth2png.py  depth_decode.py  index_multiscan.sh  index_scannet.sh  mp4_preview.sh  mp4_thumbnail.sh  mts_render.py  multiscan_poses_to_mvs_texturing_poses.py  render.py  segm_viz.py  upload.sh  utils.py
visualization/: README.md  Readme.md  annotation_visualize.py  visualization.py
visualization/config/: config.yaml
web-ui/: README.md  package.json
web-ui/config/: default.json
web-ui/public/: index.html
web-ui/public/js/: browse.js  manage-ajax.js  nyuframes.js  process.js
web-ui/src/: app.js  logger.js  process_queue.js  routes.js
web-ui/src/services/scan/hooks/: updateScan.js
web-ui/views/: annotations.pug  manage.pug  scenes.pug  scenesByType.pug  tags.pug  users.pug
web-ui/views/includes/: navbar.pug
web-ui/web-client/: README.md  package.json
web-ui/web-client/public/: index.html
web-ui/web-client/src/: App.vue  main.js
web-ui/web-client/src/axios/: index.js
web-ui/web-client/src/components/AnnotationsPage/: index.vue
web-ui/web-client/src/plugins/: vuetify.js
web-ui/web-client/src/router/: index.js
web-ui/web-client/src/styles/: variables.sass
web-ui/web-client/src/utils/: download.js
web-ui/web-client/static/: config.json
web-ui/web-server/: README.md  package.json
web-ui/web-server/config/: default.json  production.json
web-ui/web-server/public/: index.html  login.html  signup.html
web-ui/web-server/public/js/: browse.js  datatables.js  download.js  manage-ajax.js  manage.js  nyuframes.js  process.js  scenes.js  segmentation.js  tags.js
web-ui/web-server/src/: app.js  index.js  process_queue.js  proxy.js  routes.js  taskqueue.js
web-ui/web-server/views/: annotations.pug  devicesById.pug  devicesByName.pug  manage.pug  nyuframes.pug  scenes.pug  scenesByType.pug  segmentation.pug  tags.pug  users.pug
web-ui/web-server/views/includes/: navbar.pug
web-ui/web-server/views/layouts/: datatable.pug
(+69 files in other folders)
